--- a/views/no_bookings.ejs
+++ b/views/no_bookings.ejs
@@ -99,7 +99,7 @@
                                     </div>
                                     <div class="col-5 m-2 mt-0">
                                         <label for="user_name" class="form-label"><h4>Round trip</h4></label>
-                                    <input class="form-control me-2" type="date" placeholder="Date of check-out" aria-label="Date of travel" id="return_date" name="return_date" onchange="getReturnDate()" required>
+                                    <input class="form-control me-2" type="date" placeholder="Date of check-out" aria-label="Date of travel" id="return_date" name="return_date" onchange="getReturnDate()" >
                                     </div>
                                     
                                 </div>
